--- a/index.html
+++ b/index.html
@@ -336,102 +336,8 @@
       <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
     </div>
   </section>
-    <section class="nero">
+   <section class="nero">
   <h1 style="
-  background: #ff5722; 
-  color: #fff; 
-  padding: 10px 20px; 
-  border-radius: 6px; 
-  font-size: 24px; 
-  line-height: 1.3; 
-  text-align: center;
-  display: inline-block;
-  max-width: 90%;
-      margin-top: 10px;       /* Default margin ko control karo */
-  margin-bottom: 10px;
-">
-  Welcome to Joker Ludo – Your Ultimate Destination for Ludo WhatsApp Group Links!
-</h1>
-
-      <ol>
-       <li> Are you looking to join the best <strong>Ludo WhatsApp group link</strong> and play exciting Ludo games with real players? Joker Ludo offers verified and active <strong>WhatsApp Ludo group links</strong> where you can connect with fellow Ludo enthusiasts, participate in daily matches, and even win real rewards!
-     </li>
-    <li>
-        Whether you want to join a casual <strong>Ludo group link WhatsApp</strong> or compete in competitive <strong>Ludo King WhatsApp group links</strong>, we have got you covered.
-      </li>
-      </ol>
-    </section>
-
-  </section>
-  <section class="nero">
-      <h2  style="
-  background: #ff5722; 
-  color: #fff; 
-  padding: 10px 20px; 
-  border-radius: 6px; 
-  font-size: 24px; 
-  line-height: 1.3; 
-  text-align: center;
-  display: inline-block;
-  max-width: 90%;
-      margin-top: 2px;       /* Default margin ko control karo */
-  margin-bottom: 10px;
-">Why Choose Joker Ludo?</h2>
-      <ol>
-        <li><strong>Authentic Ludo WhatsApp Group Links</strong><br>All our group links are verified and updated regularly to ensure you join active and spam-free communities.</li>
-        <li><strong>Variety of Ludo Groups</strong><br>Join <strong>Ludo Star WhatsApp group links</strong>, <strong>online Ludo groups</strong>, or special groups like <strong>Ludo betting WhatsApp group links</strong> to enjoy different playing styles.</li>
-        <li><strong>Safe and Secure</strong><br>Our platform prioritizes safety. Play responsibly in groups offering real money contests and betting.</li>
-        <li><strong>Easy to Join</strong><br>Simply click on the group links, request to join on WhatsApp, and start playing immediately!</li>
-      </ol>
-</section>
-      <section class="nero">
-      <h2  style="
-  background: #ff5722; 
-  color: #fff; 
-  padding: 10px 20px; 
-  border-radius: 6px; 
-  font-size: 24px; 
-  line-height: 1.3; 
-  text-align: center;
-  display: inline-block;
-  max-width: 90%;
-      margin-top: 2px;       /* Default margin ko control karo */
-  margin-bottom: 10px;
-">Popular Ludo WhatsApp Groups You Can Join</h2>
-      <ul>
-        <li><strong>Ludo WhatsApp Group Link</strong> – For all casual and pro players.</li>
-        <li><strong>WhatsApp Ludo Group Link</strong> – Chat, share tips, and play daily.</li>
-        <li><strong>Ludo King WhatsApp Group Link</strong> – Dedicated to fans of the famous Ludo King game.</li>
-        <li><strong>Ludo Betting WhatsApp Group Link</strong> – For those interested in safe and fun betting games.</li>
-        <li><strong>Online Ludo Group WhatsApp Link</strong> – Play anytime, anywhere with active members.</li>
-      </ul>
-   
-</section>
-<section class="nero">
-      <h2  style="
-  background: #ff5722; 
-  color: #fff; 
-  padding: 10px 20px; 
-  border-radius: 6px; 
-  font-size: 24px; 
-  line-height: 1.3; 
-  text-align: center;
-  display: inline-block;
-  max-width: 90%;
-      margin-top: 2px;       /* Default margin ko control karo */
-  margin-bottom: 10px;
-">How to Join Our Ludo Groups?</h2>
-      <ol>
-        <li>Browse our updated list of <strong>Ludo WhatsApp group links</strong>.</li>
-        <li>Click your favorite group link to open WhatsApp join request.</li>
-        <li>Wait for admin approval and start enjoying matches instantly.</li>
-        <li>Engage with community members and level up your game!</li>
-      </ol>
-   
-
-</section>
-  <section class="nero">
-<h2 style="
     background: #ff5722; 
     color: #fff; 
     padding: 10px 20px; 
@@ -441,20 +347,117 @@
     text-align: center;
     display: inline-block;
     max-width: 90%;
-    margin-top: 2px;
-    margin-bottom: 10px;
+    margin: 10px auto;
+  ">
+    Welcome to Joker Ludo – Your Ultimate Destination for Ludo WhatsApp Group Links!
+  </h1>
+  <div>
+    <ol>
+      <li>Are you looking to join the best <strong>Ludo WhatsApp group link</strong> and play exciting Ludo games with real players? Joker Ludo offers verified and active <strong>WhatsApp Ludo group links</strong> where you can connect with fellow Ludo enthusiasts, participate in daily matches, and even win real rewards!</li>
+      <li>Whether you want to join a casual <strong>Ludo group link WhatsApp</strong> or compete in competitive <strong>Ludo King WhatsApp group links</strong>, we have got you covered.</li>
+    </ol>
+  </div>
+</section>
+
+<section class="nero">
+  <h2 style="
+    background: #ff5722; 
+    color: #fff; 
+    padding: 10px 20px; 
+    border-radius: 6px; 
+    font-size: 24px; 
+    line-height: 1.3; 
+    text-align: center;
+    display: inline-block;
+    max-width: 90%;
+    margin: 10px auto;
+    cursor: pointer;
+  ">Why Choose Joker Ludo?</h2>
+  <div>
+    <ol>
+      <li><strong>Authentic Ludo WhatsApp Group Links</strong><br>All our group links are verified and updated regularly to ensure you join active and spam-free communities.</li>
+      <li><strong>Variety of Ludo Groups</strong><br>Join <strong>Ludo Star WhatsApp group links</strong>, <strong>online Ludo groups</strong>, or special groups like <strong>Ludo betting WhatsApp group links</strong> to enjoy different playing styles.</li>
+      <li><strong>Safe and Secure</strong><br>Our platform prioritizes safety. Play responsibly in groups offering real money contests and betting.</li>
+      <li><strong>Easy to Join</strong><br>Simply click on the group links, request to join on WhatsApp, and start playing immediately!</li>
+    </ol>
+  </div>
+</section>
+
+<section class="nero">
+  <h2 style="
+    background: #ff5722; 
+    color: #fff; 
+    padding: 10px 20px; 
+    border-radius: 6px; 
+    font-size: 24px; 
+    line-height: 1.3; 
+    text-align: center;
+    display: inline-block;
+    max-width: 90%;
+    margin: 10px auto;
+    cursor: pointer;
+  ">Popular Ludo WhatsApp Groups You Can Join</h2>
+  <div>
+    <ul>
+      <li><strong>Ludo WhatsApp Group Link</strong> – For all casual and pro players.</li>
+      <li><strong>WhatsApp Ludo Group Link</strong> – Chat, share tips, and play daily.</li>
+      <li><strong>Ludo King WhatsApp Group Link</strong> – Dedicated to fans of the famous Ludo King game.</li>
+      <li><strong>Ludo Betting WhatsApp Group Link</strong> – For those interested in safe and fun betting games.</li>
+      <li><strong>Online Ludo Group WhatsApp Link</strong> – Play anytime, anywhere with active members.</li>
+    </ul>
+  </div>
+</section>
+
+<section class="nero">
+  <h2 style="
+    background: #ff5722; 
+    color: #fff; 
+    padding: 10px 20px; 
+    border-radius: 6px; 
+    font-size: 24px; 
+    line-height: 1.3; 
+    text-align: center;
+    display: inline-block;
+    max-width: 90%;
+    margin: 10px auto;
+    cursor: pointer;
+  ">How to Join Our Ludo Groups?</h2>
+  <div>
+    <ol>
+      <li>Browse our updated list of <strong>Ludo WhatsApp group links</strong>.</li>
+      <li>Click your favorite group link to open WhatsApp join request.</li>
+      <li>Wait for admin approval and start enjoying matches instantly.</li>
+      <li>Engage with community members and level up your game!</li>
+    </ol>
+  </div>
+</section>
+
+<section class="nero">
+  <h2 style="
+    background: #ff5722; 
+    color: #fff; 
+    padding: 10px 20px; 
+    border-radius: 6px; 
+    font-size: 24px; 
+    line-height: 1.3; 
+    text-align: center;
+    display: inline-block;
+    max-width: 90%;
+    margin: 10px auto;
     cursor: pointer;
   ">FAQs About Joker Ludo Groups</h2>
-      <ul>
-        <li><strong>Are these WhatsApp groups free to join?</strong><br>Yes! Most groups are completely free with no hidden charges.</li>
-        <li><strong>Is betting legal in these groups?</strong><br>Betting rules vary by location. Always play responsibly and comply with local laws.</li>
-        <li><strong>Can I find groups for specific regions?</strong><br>Yes, we provide group links like <strong>Kerala Ludo WhatsApp group link</strong>, <strong>Telugu Ludo WhatsApp group link</strong>, and more.</li>
-        <li><strong>What if a link is not working?</strong><br>We regularly update all links. If you face issues, check back later or contact us.</li>
-      </ul>
-  
+  <div>
+    <ul>
+      <li><strong>Are these WhatsApp groups free to join?</strong><br>Yes! Most groups are completely free with no hidden charges.</li>
+      <li><strong>Is betting legal in these groups?</strong><br>Betting rules vary by location. Always play responsibly and comply with local laws.</li>
+      <li><strong>Can I find groups for specific regions?</strong><br>Yes, we provide group links like <strong>Kerala Ludo WhatsApp group link</strong>, <strong>Telugu Ludo WhatsApp group link</strong>, and more.</li>
+      <li><strong>What if a link is not working?</strong><br>We regularly update all links. If you face issues, check back later or contact us.</li>
+    </ul>
+  </div>
 </section>
-   <section class="nero">
-    <h2 style="
+
+<section class="nero">
+  <h2 style="
     background: #ff5722; 
     color: #fff; 
     padding: 10px 20px; 
@@ -464,19 +467,21 @@
     text-align: center;
     display: inline-block;
     max-width: 90%;
-    margin-top: 2px;
-    margin-bottom: 10px;
+    margin: 10px auto;
     cursor: pointer;
-  "> Join Joker Ludo WhatsApp Groups Today and Start Playing!</h2>
-      <ol id="toggle-content" style="display: none;">
-      <li>
-        Don’t miss out on the fun and excitement! Explore our trusted <strong>Ludo WhatsApp group links</strong> and be part of a growing community of Ludo lovers.
-      </li>
-   </section>
-  <section class="seo-text">
+  ">Join Joker Ludo WhatsApp Groups Today and Start Playing!</h2>
+  <div>
+    <ol>
+      <li>Don’t miss out on the fun and excitement! Explore our trusted <strong>Ludo WhatsApp group links</strong> and be part of a growing community of Ludo lovers.</li>
+    </ol>
+  </div>
+</section>
+
+<section class="seo-text">
+  <ul>
     <li>Explore top-rated <strong>Ludo WhatsApp group links</strong> with JokerLudo. We provide the most reliable and high-paying <strong>WhatsApp Ludo groups</strong> for players across India. Get daily match updates, secure transactions, and instant payouts. Whether you're searching for <strong>Ludo King WhatsApp groups</strong>, <strong>FastWin Ludo groups</strong>, or <strong>verified earning Ludo groups</strong>, JokerLudo has you covered.</li>
-  </section>
-     </ol>
+  </ul>
+</section>
   <section class="features" style="
   width: 80%; 
   max-width: 1000px;
