--- a/index.html
+++ b/index.html
@@ -66,229 +66,220 @@
   </script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: #f4f5ff;
-      color: #333;
-    }
-    .navbar {
-      background: #2d2e52;
-      padding: 20px;
-      text-align: center;
-    }
-    .logo-img {
-      width: 100px;
-      height: auto;
-      border-radius: 8px;
-      margin-bottom: 10px;
-    }
-    .navbar h1 {
-      color: #fff;
-      font-size: 24px;
-      margin-top: 5px;
-    }
-    .nav-links {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 15px;
-      margin-top: 10px;
-    }
-    .nav-links a {
-      color: #fff;
-      text-decoration: none;
-      padding: 8px 14px;
-      border-radius: 6px;
-      transition: 0.3s;
-    }
-    .nav-links a:hover {
-      background: #ffde59;
-      color: #000;
-    }
-    .hero {
-      text-align: center;
-      padding: 50px 20px;
-      background: linear-gradient(to right, #ffe57f, #ffc107);
-    }
-    .hero h1 {
-      font-size: 32px;
-      margin-bottom: 15px;
-    }
-    .hero p {
-      font-size: 18px;
-      margin-bottom: 25px;
-      max-width: 700px;
-      margin: 0 auto 25px auto;
-      line-height: 1.5;
-    }
-    .join-btn {
-      background: #2d2e52;
-      color: #fff;
-      padding: 12px 25px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: 0.3s;
-      display: inline-block;
-    }
-    .join-btn:hover {
-      background: #1a1a3a;
-      transform: scale(1.05);
-    }
-    .features {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      padding: 40px 20px;
-    }
-    .card, .group-card {
-      background: #fff;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-      width: 280px;
-      text-align: center;
-    }
-    footer {
-      background: #2d2e52;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-    .footer-links {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 15px;
-      margin-bottom: 10px;
-    }
-    .footer-links a {
-      color: #fff;
-      text-decoration: none;
-    }
-    .footer-links a:hover {
-      color: #ffde59;
-    }
-    .seo-text {
-      max-width: 800px;
-      margin: 20px auto;
-      padding: 0 20px;
-      color: #555;
-      font-size: 16px;
-      line-height: 1.6;
-      text-align: center;
-    }
-      * {
-    box-sizing: border-box;
+   /* ===== RESET ===== */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* ===== GLOBAL STYLES ===== */
+body {
+  font-family: 'Poppins', sans-serif;
+  background: #f4f5ff;
+  color: #333;
+}
+
+/* ===== NAVBAR ===== */
+.navbar {
+  background: #2d2e52;
+  padding: 20px;
+  text-align: center;
+}
+.logo-img {
+  width: 100px;
+  height: auto;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+.navbar h1 {
+  color: #fff;
+  font-size: 24px;
+  margin-top: 5px;
+}
+.nav-links {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 15px;
+  margin-top: 10px;
+}
+.nav-links a {
+  color: #fff;
+  text-decoration: none;
+  padding: 8px 14px;
+  border-radius: 6px;
+  transition: 0.3s;
+}
+.nav-links a:hover {
+  background: #ffde59;
+  color: #000;
+}
+
+/* ===== HERO SECTION ===== */
+.hero {
+  text-align: center;
+  padding: 50px 20px;
+  background: linear-gradient(to right, #ffe57f, #ffc107);
+}
+.hero h1 {
+  font-size: 32px;
+  margin-bottom: 15px;
+}
+.hero p {
+  font-size: 18px;
+  margin-bottom: 25px;
+  max-width: 700px;
+  margin: 0 auto 25px auto;
+  line-height: 1.5;
+}
+.join-btn {
+  background: #2d2e52;
+  color: #fff;
+  padding: 12px 25px;
+  border-radius: 8px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: 0.3s;
+  display: inline-block;
+}
+.join-btn:hover {
+  background: #1a1a3a;
+  transform: scale(1.05);
+}
+
+/* ===== FEATURES ===== */
+.features {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  padding: 40px 20px;
+}
+.card, .group-card {
+  background: #fff;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+  width: 280px;
+  text-align: center;
+}
+
+/* ===== FOOTER ===== */
+footer {
+  background: #2d2e52;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+.footer-links {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 15px;
+  margin-bottom: 10px;
+}
+.footer-links a {
+  color: #fff;
+  text-decoration: none;
+}
+.footer-links a:hover {
+  color: #ffde59;
+}
+
+/* ===== SEO TEXT ===== */
+.seo-text {
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 0 20px;
+  color: #555;
+  font-size: 16px;
+  line-height: 1.6;
+  text-align: center;
+}
+
+/* ===== MAIN CONTAINER ===== */
+#container {
+  max-width: 900px;
+  margin: 30px auto;
+  background: white;
+  padding: 25px 30px;
+  border-radius: 8px;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+}
+
+/* ===== HEADINGS ===== */
+header {
+  background: #ff3e3e;
+  color: white;
+  padding: 20px 15px;
+  text-align: center;
+  font-size: 1.8rem;
+  font-weight: 700;
+  border-radius: 8px 8px 0 0;
+}
+h1, h2, h3 {
+  color: #d22;
+  margin-top: 1.5rem;
+}
+h1 { font-size: 2rem; margin-bottom: 1rem; }
+h2 { font-size: 1.5rem; margin-bottom: 1rem; }
+
+/* ===== LISTS ===== */
+ul, ol {
+  padding-left: 20px;
+  margin-bottom: 1rem;
+}
+ul li, ol li { margin-bottom: 8px; }
+p { margin-bottom: 1rem; }
+a { color: #ff3e3e; text-decoration: none; }
+a:hover { text-decoration: underline; }
+
+/* ===== CUSTOM SECTIONS ===== */
+.jk-section { margin-bottom: 30px; }
+
+/* ===== NERO SECTION (toggle headings) ===== */
+.nero {
+  text-align: center;
+  padding: 50px 20px;
+  background: #f9f9f9;
+}
+.nero h1 {
+  display: inline-block;
+  font-size: 32px;
+  margin-bottom: 20px;
+  background-color: #ff7043;
+  color: #fff;
+  padding: 12px 25px;
+  border-radius: 8px;
+  box-shadow: 2px 2px 8px rgba(0,0,0,0.3);
+  cursor: pointer;
+}
+.nero ol {
+  font-size: 18px;
+  margin: 0 auto;
+  max-width: 700px;
+  text-align: left;
+  line-height: 1.6;
+  padding-left: 40px;
+  display: none; /* hide by default for toggle effect */
+  margin-top: 10px;
+}
+
+/* ===== RESPONSIVE ===== */
+@media (max-width: 768px) {
+  .features { flex-direction: column; }
+  h1[style] {
+    font-size: 18px !important;
+    line-height: 1.2 !important;
   }
-  /* Container div for all content */
+}
+@media (max-width: 600px) {
   #container {
-    max-width: 900px;
-    margin: 30px auto;
-    background: white;
-    padding: 25px 30px;
-    border-radius: 8px;
-    box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-  }
-
-  header {
-    background: #ff3e3e;
-    color: white;
     padding: 20px 15px;
-    text-align: center;
-    font-size: 1.8rem;
-    font-weight: 700;
-    border-radius: 8px 8px 0 0;
+    margin: 20px 10px;
   }
-
-  h1, h2, h3 {
-    color: #d22;
-    margin-top: 1.5rem;
-  }
-  h1 {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-  }
-  h2 {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-  }
-
-  ul {
-    padding-left: 20px;
-    margin-bottom: 1rem;
-  }
-  ul li {
-    margin-bottom: 8px;
-  }
-  p {
-    margin-bottom: 1rem;
-  }
-  ol {
-    padding-left: 20px;
-    margin-bottom: 1rem;
-  }
-  ol li {
-    margin-bottom: 8px;
-  }
-
-  a {
-    color: #ff3e3e;
-    text-decoration: none;
-  }
-  a:hover {
-    text-decoration: underline;
-  }
-
-  /* jk section containers with spacing */
-  .jk-section {
-    margin-bottom: 30px;
-  }
-
-  @media (max-width: 600px) {
-    #container {
-      padding: 20px 15px;
-      margin: 20px 10px;
-    }
-    @media(max-width: 768px) {
-      .features { flex-direction: column; }
-    }
-  @media (max-width: 768px) {
-    h1[style] {
-      font-size: 18px !important;  /* sirf is inline styled h1 par lagega */
-      line-height: 1.2 !important;
-    }
-  }
-    .nero {
-    text-align: center;
-    padding: 50px 20px;
-    background: #f9f9f9; /* light neutral background */
-  }
-  .nero h1 {
-    display: inline-block;
-    font-size: 32px;
-    margin-bottom: 20px;
-    background-color: #ff7043; /* background color for heading only */
-    color: #fff;
-    padding: 12px 25px;
-    border-radius: 8px;
-    box-shadow: 2px 2px 8px rgba(0,0,0,0.3);
-  }
-  .nero ol {
-    font-size: 18px;
-    margin: 0 auto;
-    max-width: 700px;
-    text-align: left;
-    line-height: 1.6;
-    padding-left: 40px;
-     display: none; /* Hide by default */
-    margin-top: 10px
-  }
-  
-    
-  </style>
+}
 </head>
 <body>
   <nav class="navbar">
@@ -336,152 +327,110 @@
       <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p" class="join-btn">Join Joker Group Now</a>
     </div>
   </section>
-   <section class="nero">
-  <h1 style="
-    background: #ff5722; 
-    color: #fff; 
-    padding: 10px 20px; 
-    border-radius: 6px; 
-    font-size: 24px; 
-    line-height: 1.3; 
-    text-align: center;
-    display: inline-block;
-    max-width: 90%;
-    margin: 10px auto;
-  ">
-    Welcome to Joker Ludo – Your Ultimate Destination for Ludo WhatsApp Group Links!
-  </h1>
-  <div>
-    <ol>
-      <li>Are you looking to join the best <strong>Ludo WhatsApp group link</strong> and play exciting Ludo games with real players? Joker Ludo offers verified and active <strong>WhatsApp Ludo group links</strong> where you can connect with fellow Ludo enthusiasts, participate in daily matches, and even win real rewards!</li>
-      <li>Whether you want to join a casual <strong>Ludo group link WhatsApp</strong> or compete in competitive <strong>Ludo King WhatsApp group links</strong>, we have got you covered.</li>
-    </ol>
-  </div>
-</section>
+   <div class="container">
 
-<section class="nero">
-  <h2 style="
-    background: #ff5722; 
-    color: #fff; 
-    padding: 10px 20px; 
-    border-radius: 6px; 
-    font-size: 24px; 
-    line-height: 1.3; 
-    text-align: center;
-    display: inline-block;
-    max-width: 90%;
-    margin: 10px auto;
-    cursor: pointer;
-  ">Why Choose Joker Ludo?</h2>
-  <div>
-    <ol>
-      <li><strong>Authentic Ludo WhatsApp Group Links</strong><br>All our group links are verified and updated regularly to ensure you join active and spam-free communities.</li>
-      <li><strong>Variety of Ludo Groups</strong><br>Join <strong>Ludo Star WhatsApp group links</strong>, <strong>online Ludo groups</strong>, or special groups like <strong>Ludo betting WhatsApp group links</strong> to enjoy different playing styles.</li>
-      <li><strong>Safe and Secure</strong><br>Our platform prioritizes safety. Play responsibly in groups offering real money contests and betting.</li>
-      <li><strong>Easy to Join</strong><br>Simply click on the group links, request to join on WhatsApp, and start playing immediately!</li>
-    </ol>
-  </div>
-</section>
-
-<section class="nero">
-  <h2 style="
-    background: #ff5722; 
-    color: #fff; 
-    padding: 10px 20px; 
-    border-radius: 6px; 
-    font-size: 24px; 
-    line-height: 1.3; 
-    text-align: center;
-    display: inline-block;
-    max-width: 90%;
-    margin: 10px auto;
-    cursor: pointer;
-  ">Popular Ludo WhatsApp Groups You Can Join</h2>
-  <div>
+  <!-- Table of Contents -->
+  <div class="table-of-contents">
+    <h3>📑 Table of Contents</h3>
     <ul>
-      <li><strong>Ludo WhatsApp Group Link</strong> – For all casual and pro players.</li>
-      <li><strong>WhatsApp Ludo Group Link</strong> – Chat, share tips, and play daily.</li>
-      <li><strong>Ludo King WhatsApp Group Link</strong> – Dedicated to fans of the famous Ludo King game.</li>
-      <li><strong>Ludo Betting WhatsApp Group Link</strong> – For those interested in safe and fun betting games.</li>
-      <li><strong>Online Ludo Group WhatsApp Link</strong> – Play anytime, anywhere with active members.</li>
+      <li><a href="#welcome">Welcome to Joker Ludo</a></li>
+      <li><a href="#why">Why Choose Joker Ludo?</a></li>
+      <li><a href="#popular">Popular Ludo WhatsApp Groups</a></li>
+      <li><a href="#how">How to Join Our Ludo Groups?</a></li>
+      <li><a href="#faqs">FAQs About Joker Ludo Groups</a></li>
+      <li><a href="#join">Join Joker Ludo Today</a></li>
     </ul>
   </div>
-</section>
 
-<section class="nero">
-  <h2 style="
-    background: #ff5722; 
-    color: #fff; 
-    padding: 10px 20px; 
-    border-radius: 6px; 
-    font-size: 24px; 
-    line-height: 1.3; 
-    text-align: center;
-    display: inline-block;
-    max-width: 90%;
-    margin: 10px auto;
-    cursor: pointer;
-  ">How to Join Our Ludo Groups?</h2>
-  <div>
-    <ol>
-      <li>Browse our updated list of <strong>Ludo WhatsApp group links</strong>.</li>
-      <li>Click your favorite group link to open WhatsApp join request.</li>
-      <li>Wait for admin approval and start enjoying matches instantly.</li>
-      <li>Engage with community members and level up your game!</li>
-    </ol>
-  </div>
-</section>
+  <!-- Sections -->
+  <section id="welcome" class="nero">
+    <h1>Welcome to Joker Ludo – Your Ultimate Destination for Ludo WhatsApp Group Links!</h1>
+    <div>
+      <ol>
+        <li>Are you looking to join the best <strong>Ludo WhatsApp group link</strong> and play exciting Ludo games with real players? Joker Ludo offers verified and active <strong>WhatsApp Ludo group links</strong> where you can connect with fellow Ludo enthusiasts, participate in daily matches, and even win real rewards!</li>
+        <li>Whether you want to join a casual <strong>Ludo group link WhatsApp</strong> or compete in competitive <strong>Ludo King WhatsApp group links</strong>, we have got you covered.</li>
+      </ol>
+    </div>
+  </section>
 
-<section class="nero">
-  <h2 style="
-    background: #ff5722; 
-    color: #fff; 
-    padding: 10px 20px; 
-    border-radius: 6px; 
-    font-size: 24px; 
-    line-height: 1.3; 
-    text-align: center;
-    display: inline-block;
-    max-width: 90%;
-    margin: 10px auto;
-    cursor: pointer;
-  ">FAQs About Joker Ludo Groups</h2>
-  <div>
+  <section id="why" class="nero">
+    <h2>Why Choose Joker Ludo?</h2>
+    <div>
+      <ol>
+        <li><strong>Authentic Links</strong><br>All group links are verified and updated regularly.</li>
+        <li><strong>Variety of Groups</strong><br>Join Ludo Star, Ludo betting, or online Ludo groups.</li>
+        <li><strong>Safe and Secure</strong><br>Play responsibly in groups with real money contests.</li>
+        <li><strong>Easy to Join</strong><br>Click, request to join, and start playing!</li>
+      </ol>
+    </div>
+  </section>
+
+  <section id="popular" class="nero">
+    <h2>Popular Ludo WhatsApp Groups You Can Join</h2>
+    <div>
+      <ul>
+        <li>Ludo WhatsApp Group Link – Casual and pro players.</li>
+        <li>WhatsApp Ludo Group Link – Chat and play daily.</li>
+        <li>Ludo King WhatsApp Group Link – Fans of Ludo King game.</li>
+        <li>Ludo Betting WhatsApp Group Link – Fun and safe betting.</li>
+        <li>Online Ludo Group WhatsApp Link – Play anytime with active members.</li>
+      </ul>
+    </div>
+  </section>
+
+  <section id="how" class="nero">
+    <h2>How to Join Our Ludo Groups?</h2>
+    <div>
+      <ol>
+        <li>Browse our updated list of <strong>Ludo WhatsApp group links</strong>.</li>
+        <li>Click your favorite link to open WhatsApp.</li>
+        <li>Wait for admin approval and enjoy matches.</li>
+        <li>Engage with the community to level up!</li>
+      </ol>
+    </div>
+  </section>
+
+  <section id="faqs" class="nero">
+    <h2>FAQs About Joker Ludo Groups</h2>
+    <div>
+      <ul>
+        <li><strong>Are these groups free?</strong> Yes, most are free to join.</li>
+        <li><strong>Is betting legal?</strong> Check local laws and play responsibly.</li>
+        <li><strong>Groups by region?</strong> Yes, we have Kerala, Telugu, and more.</li>
+        <li><strong>Link not working?</strong> We update links regularly.</li>
+      </ul>
+    </div>
+  </section>
+
+  <section id="join" class="nero">
+    <h2>Join Joker Ludo WhatsApp Groups Today and Start Playing!</h2>
+    <div>
+      <ol>
+        <li>Don’t miss the fun! Explore trusted <strong>Ludo WhatsApp group links</strong> now.</li>
+      </ol>
+    </div>
+  </section>
+
+  <section class="seo-text">
     <ul>
-      <li><strong>Are these WhatsApp groups free to join?</strong><br>Yes! Most groups are completely free with no hidden charges.</li>
-      <li><strong>Is betting legal in these groups?</strong><br>Betting rules vary by location. Always play responsibly and comply with local laws.</li>
-      <li><strong>Can I find groups for specific regions?</strong><br>Yes, we provide group links like <strong>Kerala Ludo WhatsApp group link</strong>, <strong>Telugu Ludo WhatsApp group link</strong>, and more.</li>
-      <li><strong>What if a link is not working?</strong><br>We regularly update all links. If you face issues, check back later or contact us.</li>
+      <li>Explore top-rated <strong>Ludo WhatsApp group links</strong> with JokerLudo. Reliable and high-paying <strong>WhatsApp Ludo groups</strong> with daily match updates and secure transactions.</li>
     </ul>
-  </div>
-</section>
+  </section>
 
-<section class="nero">
-  <h2 style="
-    background: #ff5722; 
-    color: #fff; 
-    padding: 10px 20px; 
-    border-radius: 6px; 
-    font-size: 24px; 
-    line-height: 1.3; 
-    text-align: center;
-    display: inline-block;
-    max-width: 90%;
-    margin: 10px auto;
-    cursor: pointer;
-  ">Join Joker Ludo WhatsApp Groups Today and Start Playing!</h2>
-  <div>
-    <ol>
-      <li>Don’t miss out on the fun and excitement! Explore our trusted <strong>Ludo WhatsApp group links</strong> and be part of a growing community of Ludo lovers.</li>
-    </ol>
-  </div>
-</section>
-
-<section class="seo-text">
-  <ul>
-    <li>Explore top-rated <strong>Ludo WhatsApp group links</strong> with JokerLudo. We provide the most reliable and high-paying <strong>WhatsApp Ludo groups</strong> for players across India. Get daily match updates, secure transactions, and instant payouts. Whether you're searching for <strong>Ludo King WhatsApp groups</strong>, <strong>FastWin Ludo groups</strong>, or <strong>verified earning Ludo groups</strong>, JokerLudo has you covered.</li>
-  </ul>
-</section>
+  <section class="features">
+    <div class="card">
+      <h3>✅ 24x7 Support</h3>
+      <p>Always online to help with fast responses.</p>
+    </div>
+    <div class="card">
+      <h3>✅ Instant Withdrawals</h3>
+      <p>Quick payout every time you win.</p>
+    </div>
+    <div class="card">
+      <h3>✅ Trusted Platform</h3>
+      <p>Official Deposit No: <strong>9670814522</strong></p>
+    </div>
+  </section>
   <section class="features" style="
   width: 80%; 
   max-width: 1000px;
