--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ a:hover { text-decoration: underline; }
   text-align: center;
   font-size: 26px;
   font-weight: bold;
-  color: #333;
+  color: #d22;
   margin-bottom: 20px;
 }
 
