--- a/index.html
+++ b/index.html
@@ -327,7 +327,10 @@ a:hover { text-decoration: underline; }
   color: #555;
 }
 
-
+h3.custom-heading {
+      color: black;
+      font-weight: bold;
+    }
 /* ===== RESPONSIVE ===== */
 @media (max-width: 768px) {
   .features { flex-direction: column; }
