--- a/index.html
+++ b/index.html
@@ -331,6 +331,60 @@ h3.custom-heading {
       color: black;
       font-weight: bold;
     }
+    /* Fixed Bottom Button */
+.bottom-fixed {
+  position: fixed;
+  bottom: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1000;
+}
+.bottom-fixed button {
+  background: #ff3e3e;
+  color: #fff;
+  padding: 12px 25px;
+  border-radius: 50px;
+  border: none;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+}
+
+/* Hidden Form */
+.group-form {
+  display: none;
+  max-width: 400px;
+  margin: 50px auto;
+  padding: 20px;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 5px 20px rgba(0,0,0,0.1);
+  text-align: center;
+}
+.group-form h3 {
+  margin-bottom: 15px;
+  color: #d22;
+}
+.group-form input {
+  width: 90%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+}
+.group-form button {
+  background: #2d2e52;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+.group-form button:hover {
+  background: #1a1a3a;
+}
+
 /* ===== RESPONSIVE ===== */
 @media (max-width: 768px) {
   .features { flex-direction: column; }
@@ -368,7 +422,20 @@ h3.custom-heading {
     <br><br>
     <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Ludo Group</a>
   </section>
+<!-- Fixed Bottom Button -->
+<div class="bottom-fixed">
+  <button onclick="toggleGroupForm()">➕ Add Your Ludo Group</button>
+</div>
 
+<!-- Hidden Group Form -->
+<div id="group-form" class="group-form">
+  <h3>Add Your Ludo WhatsApp Group</h3>
+  <form>
+    <input type="text" placeholder="Enter Group Name" required><br>
+    <input type="url" placeholder="Enter WhatsApp Group Link" required><br>
+    <button type="submit">Submit</button>
+  </form>
+</div>
   <section class="features">
     <div style="flex: 1; min-width: 300px;">
       <video width="100%" controls muted poster="WhatsApp Image 2025-07-27 at 10.45.50.jpeg">
@@ -530,6 +597,15 @@ h3.custom-heading {
   }
 
   loadFrames();
+function toggleGroupForm() {
+  const form = document.getElementById("group-form");
+  if (form.style.display === "block") {
+    form.style.display = "none";
+  } else {
+    form.style.display = "block";
+    form.scrollIntoView({ behavior: "smooth" }); // auto scroll niche
+  }
+}
 
   document.querySelectorAll('.toc-item h3').forEach(heading => {
     heading.addEventListener('click', function() {
