--- a/index.html
+++ b/index.html
@@ -458,19 +458,6 @@ h3.custom-heading {
     <br><br>
     <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Ludo Group</a>
   </section>
-<div class="bottom-fixed">
-    <button onclick="toggleGroupForm()">➕ Add Your Ludo Group</button>
-  </div>
-
- <h2>Add New Group</h2>
-<form id="groupForm">
-  <input type="text" id="name" placeholder="Group Name" required>
-  <input type="text" id="link" placeholder="WhatsApp Group Link" required>
-  <button type="submit">Add Group</button>
-</form>
-
-<h2>Available Groups</h2>
-<div id="groupsList"></div>
   <section class="features">
     <div style="flex: 1; min-width: 300px;">
       <video width="100%" controls muted poster="WhatsApp Image 2025-07-27 at 10.45.50.jpeg">
@@ -573,6 +560,22 @@ h3.custom-heading {
   margin: 0 auto; 
   text-align: center;
 ">
+    <!-- Group Add Form -->
+<form id="groupForm" style="margin:20px; padding:20px; background:#f9f9f9; border-radius:12px; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
+  <h2 style="margin-bottom:15px; font-family:sans-serif; color:#333;">➕ Add New Group</h2>
+  <input id="name" type="text" placeholder="Group Name" required 
+         style="padding:10px; width:45%; margin-right:10px; border-radius:8px; border:1px solid #ccc;">
+  <input id="link" type="url" placeholder="Group Link" required 
+         style="padding:10px; width:45%; border-radius:8px; border:1px solid #ccc;">
+  <button type="submit" 
+          style="padding:10px 20px; margin-left:10px; background:#25d366; color:white; border:none; border-radius:8px; cursor:pointer; font-weight:bold;">
+    Add
+  </button>
+</form>
+
+<!-- Groups List -->
+<div id="groupsList" style="display:flex; flex-wrap:wrap; gap:20px; padding:20px;"></div>
+
     <div class="card">
       <h3>✅ 24x7 Support</h3>
       <p>Always online to help with fast responses.</p>
